--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,14 @@ $RECYCLE.BIN/
 Network Trash Folder
 Temporary Items
 .apdisk
+css/m.21e9e824.css
+navigator.html
+img/QQ截图20160504182041.png
+img/QQ截图20160504182718.png
+css/login.css
+index-old.html
+css/navigator.css
+css/header.css
+header-flexbox.html
+login.html
+header.html
