--- a/.gitignore
+++ b/.gitignore
@@ -56,3 +56,6 @@ css/header.css
 header-flexbox.html
 login.html
 header.html
+img/sprites-1.9.2.4c54885a-old.png
+img/sprites-1.9.2.4c54885a.psd
+task/QQ截图20160507145133.png
