--- a/package.json
+++ b/package.json
@@ -1,30 +1,29 @@
 {
-  "name": "vue01",
-  "description": "A Vue.js project",
-  "author": "qieguo <qieguo.chow@gmail.com>",
+  "name": "express",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
-    "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
+    "dev": "supervisor server",
+    "start": "cross-env NODE_ENV=production node server",
+    "build": "npm run build:client && npm run build:server",
+    "build:client": "cross-env NODE_ENV=production webpack --config build/webpack.client.config.js --progress --hide-modules",
+    "build:server": "cross-env NODE_ENV=production webpack --config build/webpack.server.config.js --progress --hide-modules"
   },
   "dependencies": {
-    "es6-promise": "^4.0.5",
-    "marked": "^0.3.6",
-    "vue": "^2.0.1",
-    "vue-resource": "^1.0.3",
-    "vue-router": "^2.0.1",
-    "vuex": "^2.0.0"
+    "body-parser": "~1.15.1",
+    "compression": "^1.6.2",
+    "es6-promise": "^3.2.1",
+    "express": "^4.14.0",
+    "log4js": "^0.6.38",
+    "serve-favicon": "^2.3.0",
+    "superagent": "^3.3.1",
+    "vue": "^2.0.0",
+    "vue-router": "^2.0.0",
+    "vuex": "^2.0.0",
+    "vuex-router-sync": "^3.0.0"
   },
   "devDependencies": {
-    "babel-core": "^6.0.0",
-    "babel-loader": "^6.0.0",
-    "babel-preset-es2015": "^6.0.0",
-    "babel-preset-stage-2": "^6.17.0",
-    "cross-env": "^3.0.0",
-    "css-loader": "^0.25.0",
-    "file-loader": "^0.9.0",
-    "vue-loader": "^9.4.0",
-    "webpack": "2.1.0-beta.22",
-    "webpack-dev-server": "^2.1.0-beta.0"
+    "autoprefixer": "^6.4.0",
+    "cross-env": "^2.0.0"
   }
 }
