--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development webpack-dev-server --open --inline --hot",
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules",
-    "devServer": "supervisor server"
+    "devServer": "supervisor server",
+    "start": "node server"
   },
   "dependencies": {
     "animate": "^1.0.0",
