--- a/.babelrc
+++ b/.babelrc
@@ -2,5 +2,11 @@
   "presets": [
     ["es2015", { "modules": false }],
     "stage-2"
-  ]
+  ],
+  "plugins": [["component", [
+    {
+      "libraryName": "mint-ui",
+      "style": true
+    }
+  ]]]
 }
