--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "es6-promise": "^3.2.1",
     "express": "^4.14.0",
     "log4js": "^0.6.38",
+    "mint-ui": "^2.1.0",
     "superagent": "^3.3.1",
     "vue": "^2.1.0",
     "vue-router": "^2.0.0",
@@ -29,6 +30,7 @@
     "autoprefixer": "^6.4.0",
     "babel-core": "^6.0.0",
     "babel-loader": "^6.0.0",
+    "babel-plugin-component": "^0.9.0",
     "babel-preset-es2015": "^6.0.0",
     "babel-preset-stage-2": "^6.18.0",
     "cross-env": "^3.0.0",
@@ -36,6 +38,7 @@
     "file-loader": "^0.9.0",
     "html-webpack-plugin": "^2.26.0",
     "rimraf": "^2.5.4",
+    "style-loader": "^0.13.1",
     "vue-loader": "^10.0.0",
     "vue-template-compiler": "^2.1.0",
     "webpack": "^2.1.0-beta.25",
