--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "zhihu-daily",
-  "description": "A Vue.js project",
+  "description": "zhihu-daily: A Vue.js project",
   "version": "1.0.0",
   "author": "qieguo <qieguo.chow@gmail.com>",
   "private": true,
